--- a/Python 3 Test.ipynb
+++ b/Python 3 Test.ipynb
@@ -184,7 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "geoclient = Geoclient(app_id='e8641bad', app_key='22c53431c17717ffa7620fa546dd1272')"
+    "geoclient = Geoclient(app_id='###', app_key='###')"
    ]
   },
   {
