--- a/Python 2 Test.ipynb
+++ b/Python 2 Test.ipynb
@@ -183,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "geoclient = Geoclient(app_id='e8641bad', app_key='22c53431c17717ffa7620fa546dd1272')"
+    "geoclient = Geoclient(app_id='###', app_key='###')"
    ]
   },
   {
@@ -926,21 +926,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
